--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+  <div id="loading">
+    <span class="loader"><span>0%</span></span>
+    <span class="letter">"Responderemos a la amenaza del cambio climático y economico, sabiendo que si no lo hacemos estaremos traicionando a nuestros hijos y a generaciones futuras"</span>
+  </div>
+  <div id="content">
+    Contenido de la pagina
+  </div>
   <script src="assets/js/app.js" charset="utf-8"></script>
 </body>
 </html>
