--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Proyecto X</title>
   <link rel="stylesheet" href="assets/css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One" rel="stylesheet">
 </head>
 <body>
   <div id="loading">
@@ -13,7 +14,36 @@
     <span class="letter">"Responderemos a la amenaza del cambio climático y economico, sabiendo que si no lo hacemos estaremos traicionando a nuestros hijos y a generaciones futuras"</span>
   </div>
   <div id="content">
-    Contenido de la pagina
+     <!-- Navigation -->
+        <nav id="slide-menu">
+            <ul>
+                <li class="timeline icon-pagelines">
+                    <a href="#AIRE">AIRE</a></li>  
+                <li class="events icon-sunrise2">
+                    <a href="#AltoPeru">ALTO PERU</a></li>
+                <li class="calendar icon-soccer-court2">
+                    <a href="#">FL7</a></li>
+                <li class="sep settings icon-paint-format">
+                    <a href="#">KANI</a></li>
+                <li class="logout icon-mobile">
+                    <a href="#">Contáctenos</a></li>
+            </ul>
+            <ul class="redes">
+                <li><span class="icon-youtube-with-circle redes"></span></li>
+                <li><span class="icon-facebook red"></span></li>
+                <li><span class="icon-twitter red"></span></li>
+                <li><span class="icon-googleplus red"></span></li>
+            </ul>
+        </nav>
+        <!-- Content panel -->
+        <div id="content">
+            <div class="menu">
+                <a id="nav-toggle" href="#">
+                    <span></span>Menu
+                </a>
+            </div>
+            <img src="6.jpg" alt="portada" style="height:100%; width:100%; z-index:-1">
+        <
   </div>
   <script src="assets/js/app.js" charset="utf-8"></script>
 </body>
