--- a/index.html
+++ b/index.html
@@ -6,26 +6,29 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Proyecto X</title>
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One" rel="stylesheet">
 </head>
 <body>
   <div id="loading">
-    <span class="loader"><span>0%</span></span>
-    <span class="letter">"Responderemos a la amenaza del cambio climático y economico, sabiendo que si no lo hacemos estaremos traicionando a nuestros hijos y a generaciones futuras"</span>
+    <span class="loader">
+       <span>0%</span>
+    </span>
+    <span class="letter">"Todo logro, grande o pequeño, comienza en tu mente"</span>
   </div>
-  <div id="content">
+  <div id="body">
      <!-- Navigation -->
         <nav id="slide-menu">
             <ul>
-                <li class="timeline icon-pagelines">
+                <li class="icon-pagelines">
                     <a href="#AIRE">AIRE</a></li>  
-                <li class="events icon-sunrise2">
+                <li class="icon-sunrise2">
                     <a href="#AltoPeru">ALTO PERU</a></li>
-                <li class="calendar icon-soccer-court2">
+                <li class="icon-soccer-court2">
                     <a href="#">FL7</a></li>
-                <li class="sep settings icon-paint-format">
+                <li class="sep icon-paint-format">
                     <a href="#">KANI</a></li>
-                <li class="logout icon-mobile">
+                <li class=" icon-mobile">
                     <a href="#">Contáctenos</a></li>
             </ul>
             <ul class="redes">
@@ -39,12 +42,12 @@
         <div id="content">
             <div class="menu">
                 <a id="nav-toggle" href="#">
-                    <span></span>Menu
+                    <span></span>
                 </a>
             </div>
-            <img src="6.jpg" alt="portada" style="height:100%; width:100%; z-index:-1">
-        <
+            <!-- <img src="img/AirePeru/6.jpg" alt="portada" style="height:100%; width:100%; z-index:-1"> -->
+        </div>
   </div>
-  <script src="assets/js/app.js" charset="utf-8"></script>
+  <script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
