Anadiendo nueva pagina

--- a/Aire.html
+++ b/Aire.html
@@ -21,7 +21,7 @@
         <nav id="slide-menu">
             <ul>
                 <li class="icon-pagelines">
-                    <a href="aire.html">AIRE</a></li>  
+                    <a href="#AIRE">AIRE</a></li>  
                 <li class="icon-sunrise2">
                     <a href="#AltoPeru">ALTO PERU</a></li>
                 <li class="icon-soccer-court2">
@@ -46,11 +46,13 @@
                 </a>
             </div>
             <div class="cuerpo">
-                <h1>Desarrollo Sostenible</h1>
-                <h6>4 Marcas una sola Visión </h6>
-                 <img src="assets/img/AirePeru/7.jpg" alt="portada" class="muestra">
+                <h1>ASOCIACION AIRE</h1>
+                <div class="typewriter text-uppercase text-home mb-0">
+                    <h1>ARTE + MEDIO AMBIENTE</h1>
+                </div>
+                <p>Somos una asociación sin fin de lucro que tiene como fin mejorar la calidad de vida en Lima.</p>
+                
             </div>
- 
         </div>
   </div>
   <footer>
