--- a/Fl7.html
+++ b/Fl7.html
@@ -52,7 +52,7 @@
                     <h1>Nadie te puede decir no puedes...!!!></h1>
                 </div>
                 <p>La organización Ligas Femeninas de Fútbol 7 es el circuito de Fútbol Femenino más grande del Perú que busca, a través de la creación de ligas, academias, partidos libres y capacitaciones formalizar el fútbol 7 femenino en el Perú. 
-                A su vez, tiene por objetivo, a través del fútbol, dar empoderamiento y liderazgo a la mujer contribuyendo en la disminución de la inequidad de género en el deporte. También motiva la actividad física y estilo de vida saludables.
+                A su vez, tiene por objetivo, a través del fútbol, dar empoderamiento y liderazgo a la mujer contribuyendo en la disminución de la inequidad de género en el deporte. También motiva la actividad física y estilos de vida saludables.
                 <p>
                 Nuestros productos son:
                 </p>
@@ -60,9 +60,12 @@
                 <p> 2. Academia LF7</p>
                 <p> 3. Pichangas Domingueras</p>
                 <div class="Mensaje">
-                  <img src="assets/img/Fl7/20.jpg" alt="Mia Ham" class="frase">
+                  <img src="assets/img/Fl7/20.png" alt="Mia Ham" class="frase">
                   <img src="assets/img/Fl7/21.jpg" alt="Mensaje" class="frase">
                   <img src="assets/img/Fl7/22.jpg" alt="Mensaje" class="frase">
+                </div>
+                <div class="negro">
+                  
                 </div>
                 
             </div>
