add loading finall

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Proyecto X</title>
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/style_logo.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One" rel="stylesheet">
 </head>
 <body>
@@ -14,14 +15,24 @@
     <span class="loader">
        <span>0%</span>
     </span>
-    <span class="letter">"Todo logro, grande o pequeño, comienza en tu mente"</span>
+      <span class="letter-loader">"Todo logro, grande o pequeño, comienza en tu mente"</span>
+  </div>
+  <div id="logo">
+    <span id="letter-a" class="letter">A</span>
+    <span id="letter-e" class="letter">E</span>
+    <span id="letter-r" class="letter">R</span>
+    <span id="letter-o" class="letter">O</span>
+    <span id="letter-K" class="letter">K</span>
+    <span id="letter-N" class="letter">N</span>
+    <span id="letter-I" class="letter">I</span>
+    <span id="letter-peru" class="letter">PERÚ</span>
   </div>
   <div id="body">
      <!-- Navigation -->
         <nav id="slide-menu">
             <ul>
                 <li class="icon-pagelines">
-                    <a href="aire.html">AIRE</a></li>  
+                    <a href="aire.html">AIRE</a></li>
                 <li class="icon-sunrise2">
                     <a href="#AltoPeru">ALTO PERU</a></li>
                 <li class="icon-soccer-court2">
@@ -50,7 +61,7 @@
                 <h6>4 Marcas una sola Visión </h6>
                  <img src="assets/img/AirePeru/7.jpg" alt="portada" class="muestra">
             </div>
- 
+
         </div>
   </div>
   <footer>
