--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <li class="icon-pagelines">
                     <a href="aire.html">AIRE</a></li>  
                 <li class="icon-sunrise2">
-                    <a href="#AltoPeru">ALTO PERU</a></li>
+                    <a href="altoperu.html">ALTO PERU</a></li>
                 <li class="icon-soccer-court2">
-                    <a href="#">FL7</a></li>
+                    <a href="Fl7.html">FL7</a></li>
                 <li class="sep icon-paint-format">
                     <a href="#">KANI</a></li>
                 <li class=" icon-mobile">
