--- a/index.html
+++ b/index.html
@@ -128,7 +128,89 @@
                 <h6>4 Marcas una sola Visión </h6>
                  <img src="assets/img/AirePeru/7.jpg" alt="portada" class="muestra">
             </div>
+            <div class="cuerpo1"> <center>
+                <h1>Ligas Femeninas F7</h1>
+                <img src="assets/img/Fl7/32.jpg" alt="logo" class="logo">
+                <div class="typewriter">
+                    <h1>AMOR + PASION =<span class="icon-soccer-ball"></span></h1>
+                </div> </center>
+                <div class="uno">
+                    <p>La organización Ligas Femeninas de Fútbol 7 es el circuito de Fútbol Femenino más grande del Perú que busca, a través de la creación de ligas, academias, partidos libres y capacitaciones formalizar el fútbol 7 femenino en el Perú.
+                    A su vez, tiene por objetivo, a través del fútbol, dar empoderamiento y liderazgo a la mujer contribuyendo en la disminución de la inequidad de género en el deporte. También motiva la actividad física y estilos de vida saludables.
+                    <br>
+                    Nuestros productos son:
+                    <br>
+                    <br>1. Ligas: Libre LF7 (1ra, 2da y 3ra división), Inter Colegio, Inter empresa
+                    <br> 2. Academia LF7
+                    <br>3. Pichangas Domingueras
+                </div>
+                <div class="Mensaje">
+                  <img src="assets/img/Fl7/20.png" alt="Mia Ham" class="frase">
+                  <img src="assets/img/Fl7/21.jpg" alt="Mensaje" class="frase">
+                  <img src="assets/img/Fl7/22.jpg" alt="Mensaje" class="frase">
+             
+                </div>
+                <div class="negro">
+                     <iframe width="100%" height="500" src="https://www.youtube.com/embed/2mS7dxejjoQ?" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="cuerpo1"> <center>
+                <h1>Alto Peru</h1>
+                <img src="assets/img/AltoPeru/41.png" alt="logo" class="logo">
+                <div class="typewriter">
+                    <h1> Amor por las olas  <span class="icon-sunglasses mayor"></span></h1>
+                </div> </center>
+                <div class="dos">
+                  <p>El Proyecto Alto Perú trabaja con niños, niñas y adolescentes de Chorrillos - Lima, utilizando el deporte y otras prácticas culturales como vehículos para el empoderamiento y el desarrollo emocional, inculcando valores y actitudes positivas hacia la vida. Consideramos que el deporte y las actividades artísticas son elementos fundamentales para la educación integral de los niños y niñas. y en el contexto del proyecto, son herramientas para su futuro laboral.</p>
+                  </div>
+                <div class="Mensaje">
+                  <img src="assets/img/AltoPeru/19.jpg" class="frase">
+                  <img src="assets/img/AltoPeru/43.jpg"  class="frase">
+                  <img src="assets/img/AltoPeru/39.jpg" class="frase">
+                </div>
+                <div class="negro">
+                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/NV-T6xCI5OU" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="cuerpo1 tres"> <center>
+                <h1>Asociacion Aire</h1>
+                <img src="assets/img/AirePeru/1.jpg" alt="logo" class="logo">
+                <div class="typewriter">
+                    <h1>AIRE + MEDIO AMBIENTE</h1>
+                </div> </center>
+                <p>Somos una asociación sin fin de lucro que tiene como fin mejorar la calidad de vida en Lima.
+                </p>
+                <p><strong>RESPONSABILIDAD</strong> Incentivar el desarrollo socialmente responsable de las empresas e  instituciones públicas.<br>
+                <strong>ECOLOGIA</strong>Satisfacer las necesidades actuales de las personas sin comprometer las posibilidades de que las futuras generaciones atiendan las suyas.<br>
+                <strong>ARTE</strong> Usar el arte como un recurso de embellecimiento de la ciudad y promover el sentido de pertenencia al espacio público de los ciudadanos.<br>
+                <strong>INNOVACION</strong>Usar la tecnología como un recurso que permita mitigar la contaminación del aire.<br>
+                <div class="Mensaje">
+                  <img src="assets/img/AirePeru/12.jpg" alt="Mensaje" class="frase">
+                  <img src="assets/img/AirePeru/17.jpg" alt="Mensaje" class="frase">
+                  <img src="assets/img/AirePeru/18.jpg" alt="Mensaje" class="frase">
 
+                </div>
+                <div class="negro">
+                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/UHn8HnEJ99I?list=PLy2IZ_ltay8Y1a6VvyoLeuYABV4NLrt0g" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="cuerpo1 cuatro"> <center>
+                <h1>Proyecto KANI</h1>
+                <img src="assets/img/Fl7/32.jpg" alt="logo" class="logo">
+                <div class="typewriter">
+                    <h1>HACER A MANO</h1>
+                </div> </center>
+                <p>Las artesanas y artesanos son una población importante del Perú. La mayoría de proyectos de artesanos no tienen las herramientas para generar ingresos sostenibles para que el artesano pueda vivir de este oficio. Esto significa que como país estamos perdiendo el oficio del artesano, técnicas tradicionales e identidad.</p>
+                <div class="Mensaje">
+                  <img src="assets/img/Kani/4.jpg" alt="Mia Ham" class="frase">
+                  <img src="assets/img/Kani/6.jpg" alt="Mensaje" class="frase">
+                  <img src="assets/img/Kani/13.jpg" alt="Mensaje" class="frase">
+
+                </div>
+                <div class="negro">
+                  <iframe width="100%" height="500" src="https://www.youtube.com/embed/Lue9N3JRJi4" frameborder="0" allowfullscreen></iframe> 
+                </div>
+            </div>
         </div>
   </div>
   <footer>
